objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Church_Parish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Church/Parish</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Envelope_Household_ID__c</fullName>
        <label>Envelope #/Household ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary contact for this account, select from the list of available contacts for this account.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Please select a primary contact from the list of available contacts for this account</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parish_ID__c</fullName>
        <label>Parish ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Affiliations_and_Groups</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npe01__One2OneContact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Group</value>
        </filters>
        <label>Affiliations and Groups</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Households</label>
    </listViews>
    <listViews>
        <fullName>Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npo02__HouseholdPhone__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>npo02__Best_Gift_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>Household Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Envelope_Household_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <description>Ministry, group or other parish/school organization.</description>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An account representing a household containing one or more individuals.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>A corporation, business, institution or non-Catholic religious organization.</description>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parish</fullName>
        <active>true</active>
        <description>Roman Catholic parish account.</description>
        <label>Parish</label>
    </recordTypes>
</CustomObject>